# si470x

./: CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  doxygen.conf  library.json  mos.yml
include/: mgos_si470x.h  port.h  si470x.h  si470x_common.h  si470x_port.h
mjs_fs/: api_si470x.js
src/: logging.h  mgos_si470x.c  port_espidf.c  port_mgos.c  port_unix.c  si470x.c  si470x_misc.c  si470x_misc.h
